--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
   <body>
     <div class="container">
       <h1>This is a page for you</h1>
+      <div class="vibe">You are Jamstastic</div>
       <div class="honeypot">
         <span role="img" aria-label="honey pot" aria-hidden="false">🍯</span>
       </div>
     </div>
+    <script src="vibe.js"></script>
   </body>
 </html>
