deploy: 30610e3a96fcbb611afecf9a3bb65f1bfd03478c

--- a/how-to-design-programs/index.html
+++ b/how-to-design-programs/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How to Design Programs</title>
-    <link rel="stylesheet" href="/jamstastic/css/style.css" />
+    <link rel="stylesheet" href="/University-of-Trial-and-Error/css/style.css" />
   </head>
 
   <body>
     <header>
-      <a href="/jamstastic/">
+      <a href="/University-of-Trial-and-Error/">
         For you
       </a>
         | 
-      <a href="/jamstastic/about">
+      <a href="/University-of-Trial-and-Error/about">
         About this page for you
       </a>
     </header>
