--- a/about/index.html
+++ b/about/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About | Jamstastic</title>
-    <link rel="stylesheet" href="/jamstastic/css/style.css" />
+    <title>About | University-of-Trial-and-Error</title>
+    <link rel="stylesheet" href="/University-of-Trial-and-Error/css/style.css" />
   </head>
 
   <body>
     <header>
-      <a href="/jamstastic/">
+      <a href="/University-of-Trial-and-Error/">
         For you
       </a>
         | 
-      <a href="/jamstastic/about">
+      <a href="/University-of-Trial-and-Error/about">
         About this page for you
       </a>
     </header>
